--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/nuit"]
-	path = lib/nuit
+[submodule "lang/arc/nu/lib/nuit"]
+	path = lang/arc/nu/lib/nuit
 	url = git://github.com/Pauan/nuit.git
